--- a/public/index.html
+++ b/public/index.html
@@ -44,5 +44,29 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "HairSalon",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Osnabrueck",
+          "addressRegion": "OS",
+          "postalCode": "31515",
+          "streetAddress": "Koksche Straße 15"
+        },
+        "name": "Salon Artifex",
+        "openingHours": [
+          "Di-Fr 10:00-19:00",
+          "Sa 09:00-15:00"
+        ],
+        "priceRange": "$$",
+        "paymentAccepted": "Cash, Credit Card",
+        "telephone": "(0541) 91 56 899",
+        "url": "http://www.salonartifex.de",
+        "image": "http://www.salonartifex.de/static/artifex-logo-final.png"
+      }
+      </script>
   </body>
 </html>
